--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.Triumph"
         tools:targetApi="31">
         <activity
-            android:name=".KanbanChart"
+            android:name=".ChartActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
